Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63149

module "QtQuick.Controls.Fusion" version 2.3 is not installed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.11.0
    • 5.11
    • Quick: Controls 2
    • None
    • dev
    • a5792366f81fea6eb5ab3e301cd7abdfec0820c7

      QQmlApplicationEngine failed to load component
      qrc:/main.qml:3 module "QtQuick.Controls.Fusion" version 2.3 is not installed
      
      import QtQuick 2.7
      import QtQuick.Controls 2.3
      import QtQuick.Controls.Fusion 2.3
      
      ApplicationWindow {
          id: window
          width: 360
          height: 360
          visible: true
      
          Button {
              text: "Button"
              anchors.centerIn: parent
          }
      }
      

      See also "merge remote-tracking branch 'origin/5.10' into dev": https://codereview.qt-project.org/#/c/205116/

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes