Fusion: fix type registration

When the Qt version was bumped to 5.11, QtQuick.Controls.Fusion 2.3
became 2.4 and the 2.3 import was no longer available. We have to
combine the QT_VERSION_MINOR based qmlRegisterModule() with a hard
coded version that keeps the old version 2.3 available.

Task-number: QTBUG-63149
Change-Id: Ie268fa52282342930349f6b7c46052964e7073c2
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>