src/imports/controls/fusion/qtquickcontrols2fusionstyleplugin.cpp
@@ -82,7 +82,8 @@ QtQuickControls2FusionStylePlugin::QtQuickControls2FusionStylePlugin(QObject *pa
 
 void QtQuickControls2FusionStylePlugin::registerTypes(const char *uri)
 {
-    qmlRegisterModule(uri, 2, QT_VERSION_MINOR - 7); // Qt 5.10->2.3, 5.11->2.4...
+    qmlRegisterModule(uri, 2, 3); // Qt 5.10->2.3
+    qmlRegisterModule(uri, 2, QT_VERSION_MINOR - 7); // Qt 5.11->2.4, 5.12->2.5...
 }
 
 void QtQuickControls2FusionStylePlugin::initializeEngine(QQmlEngine *engine, const char *uri)
@@ -90,7 +91,7 @@ void QtQuickControls2FusionStylePlugin::initializeEngine(QQmlEngine *engine, con
     QQuickStylePlugin::initializeEngine(engine, uri);
 
     QByteArray import = QByteArray(uri) + ".impl";
-    qmlRegisterModule(import, 2, QT_VERSION_MINOR - 7); // Qt 5.10->2.3, 5.11->2.4...
+    qmlRegisterModule(import, 2, QT_VERSION_MINOR - 7); // Qt 5.11->2.4, 5.12->2.5...
 
     qmlRegisterSingletonType<QQuickFusionStyle>(import, 2, 3, "Fusion", styleSingleton);
 
